Switch-Button added

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,6 +12,7 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.MountainTracker"
         tools:targetApi="31">
+        <activity android:name=".SecondActivity"></activity>
         <activity
             android:name=".MainActivity"
             android:exported="true">
